--- a/blog.html
+++ b/blog.html
@@ -3,18 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="image/manalys-dessert-delivery-logo.png"
+    />
     <link rel="stylesheet" href="css/default.css" />
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/confirmation.css" />
-    <link rel="stylesheet" href="css/blog.css">
+    <link rel="stylesheet" href="css/blog.css" />
     <script src="script/cart.js" defer></script>
     <script
       src="https://kit.fontawesome.com/7e4dac37c7.js"
       crossorigin="anonymous"
     ></script>
 
-    <title>Confirmation</title>
+    <title>Blog</title>
   </head>
   <body>
     <header>
@@ -39,61 +44,72 @@
         </button>
       </div>
     </header>
-    
+
     <main>
       <section>
-        <h1>Upcoming Workshops</h1>
+        <h1 class="title">Upcoming Workshops</h1>
 
         <article>
-          <h2>Cupcake Decorating Class: Fun for Kids and Adults</h2>
-          <p class="date">August 24, 2024</p>
-          <p>
-            Join us for a fun-filled cupcake decorating class that's perfect for both kids and adults! This
-            interactive event will teach participants how to decorate cupcakes with various frosting
-            techniques, sprinkles, and fun toppings. It's a fantastic way to spend quality time together while
-            learning new decorating skills. Each participant will decorate and take home their own set of
-            cupcakes. No prior experience is needed. Book your spot today and enjoy a creative day with
-            the family!
+          <h2 class="session-title">
+            Cupcake Decorating Class: Fun for Kids and Adults
+          </h2>
+          <p class="regular-text date">August 24, 2024</p>
+          <p class="regular-text">
+            Join us for a fun-filled cupcake decorating class that's perfect for
+            both kids and adults! This interactive event will teach participants
+            how to decorate cupcakes with various frosting techniques,
+            sprinkles, and fun toppings. It's a fantastic way to spend quality
+            time together while learning new decorating skills. Each participant
+            will decorate and take home their own set of cupcakes. No prior
+            experience is needed. Book your spot today and enjoy a creative day
+            with the family!
           </p>
         </article>
 
         <article>
-          <h2>Drip Cake Decorating Workshop</h2>
-          <p class="date">August 28, 2024</p>
-          <p>
-            Join us for an exclusive workshop dedicated to the art of decorating a stunning drip cake! In this
-            hands-on session, we will guide you through the techniques needed to create a perfect drip
-            effect, from the chocolate ganache to the final touches. All materials will be provided, including
-            the cake, decorations, and tools. By the end of the workshop, you'll have a beautifully decorated
-            cake to take home and enjoy. Spaces are limited, so be sure to register early!
+          <h2 class="session-title">Drip Cake Decorating Workshop</h2>
+          <p class="regular-text date">August 28, 2024</p>
+          <p class="regular-text">
+            Join us for an exclusive workshop dedicated to the art of decorating
+            a stunning drip cake! In this hands-on session, we will guide you
+            through the techniques needed to create a perfect drip effect, from
+            the chocolate ganache to the final touches. All materials will be
+            provided, including the cake, decorations, and tools. By the end of
+            the workshop, you'll have a beautifully decorated cake to take home
+            and enjoy. Spaces are limited, so be sure to register early!
           </p>
         </article>
       </section>
 
       <section>
-        <h1>Promotions</h1>
+        <h2 class="session-title">Promotions</h2>
 
         <article>
-          <h2>Seasonal Treat Box</h2>
-          <p class="date">August 6, 2024 - August 25, 2024</p>
+          <h3 class="session-subtitle">Seasonal Treat Box</h3>
+          <p class="regular-text date">August 6, 2024 - August 25, 2024</p>
           <div>
-            <p>
-              Discover the flavors of the season with our exclusive Seasonal Treat Box, available for pickup 
-              only! Enjoy a 20% discount on a box filled with a selection of our seasonal treats.
+            <p class="regular-text">
+              Discover the flavors of the season with our exclusive Seasonal
+              Treat Box, available for pickup only! Enjoy a 20% discount on a
+              box filled with a selection of our seasonal treats.
             </p>
-            <p>The box includes:</p>
-            <ul>
+            <p class="regular-text">The box includes:</p>
+            <ul class="regular-text">
               <li>Strawberry Cupcakes</li>
               <li>Arabian Baklava Rings (containing walnuts and pistachios)</li>
-              <li>Fluffernutter Chocolate Chip Cookies (containing peanut butter)</li>
+              <li>
+                Fluffernutter Chocolate Chip Cookies (containing peanut butter)
+              </li>
               <li>Blueberry Cheesecake Cups</li>
             </ul>
-            <p>
-              <strong>No modifications permitted with discount.</strong> Perfect for sampling a variety of our delicious
-              offerings, this promotion is designed to let you experience our seasonal treats at a fantastic
-              price. Simply place your order and visit our location to pick up your treat box(es) and use promo 
-              code <strong>TREAT20</strong> at checkout. Don't miss this chance to savor our seasonal 
-              specialties!
+            <p class="regular-text">
+              <strong>No modifications permitted with discount.</strong> Perfect
+              for sampling a variety of our delicious offerings, this promotion
+              is designed to let you experience our seasonal treats at a
+              fantastic price. Simply place your order and visit our location to
+              pick up your treat box(es) and use promo code
+              <strong>TREAT20</strong> at checkout. Don't miss this chance to
+              savor our seasonal specialties!
             </p>
           </div>
         </article>
@@ -101,13 +117,17 @@
 
       <section>
         <article>
-          <h2>Banana Bread</h2>
-          <p class="date">July 30, 2024 </p>
-          <img src="" alt="">
+          <h2 class="session-title">Banana Bread</h2>
+          <p class="regular-text date">July 30, 2024</p>
+          <img src="" alt="" />
+          <p class="regular-text">
+            This banana bread recipe creates the most delicious, moist loaf with
+            loads of banana flavor.
+          </p>
 
           <div>
-            <h3>Ingredients:</h3>
-            <ul>
+            <h3 class="session-subtitle">Ingredients:</h3>
+            <ul class="regular-text">
               <li>3 overripe medium bananas, mashed</li>
               <li>1/2 cup unsalted butter, melted</li>
               <li>3/4 cup granulated sugar</li>
@@ -121,31 +141,35 @@
               <li>2/3 cup chocolate chips or mixed nuts, roughly chopped</li>
             </ul>
 
-            <h3>Instructions:</h3>
-            <ol>
+            <h3 class="session-subtitle">Instructions:</h3>
+            <ol class="regular-text">
               <li>
-                Preheat oven to 350ºF. Grease a 9 x 5 inch loaf pan and set aside.
+                Preheat oven to 350ºF. Grease a 9 x 5 inch loaf pan and set
+                aside.
               </li>
               <li>
-                In a large bowl, whisk together mashed bananas with the melted butter, stirring 
-                to combine. Add the brown sugar and white sugar. Whisk to combine. Add the 
-                greek yogurt, eggs, and vanilla extract and whisk until fully combined.
+                In a large bowl, whisk together mashed bananas with the melted
+                butter, stirring to combine. Add the brown sugar and white
+                sugar. Whisk to combine. Add the greek yogurt, eggs, and vanilla
+                extract and whisk until fully combined.
               </li>
               <li>
-                In a separate bowl, combine the flour, baking soda, and salt. Fold the dry 
-                ingredients into the wet. Do not over mix! Fold the chocolate chips/nuts in last, 
-                folding a few times until just combined.
+                In a separate bowl, combine the flour, baking soda, and salt.
+                Fold the dry ingredients into the wet. Do not over mix! Fold the
+                chocolate chips/nuts in last, folding a few times until just
+                combined.
               </li>
               <li>
-                Bake for 50 minutes, or until a knife inserted in the center comes out clean. 
-                Allow to cool for 15 minutes before removing from loaf pan and serving!
+                Bake for 50 minutes, or until a knife inserted in the center
+                comes out clean. Allow to cool for 15 minutes before removing
+                from loaf pan and serving!
               </li>
             </ol>
 
-            <h4>Notes:</h4>
-            <p>
-              If the top of the bread is browning too fast, cover the bread with tinfoil and place back in the 
-              oven to finish baking
+            <span class="notes">Notes:</span>
+            <p class="regular-text">
+              If the top of the bread is browning too fast, cover the bread with
+              tinfoil and place back in the oven to finish baking
             </p>
           </div>
         </article>
