--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="image/manalys-dessert-delivery-logo.png"
+    />
     <link rel="stylesheet" href="css/default.css" />
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/header.css" />
@@ -46,12 +51,10 @@
       <p class="regular-text">Phone: 123-456-789</p>
       <p class="regular-text">Sharing hapiness everywhere!<br />Join us!</p>
 
-      <!-- todo: validade this form -->
-
-      <form action="index.html" method="post">
+      <form>
         <div class="form-group">
           <label for="name">Type your name</label>
-          <input type="text" id="name" name="name" required />
+          <input type="text" id="name" name="name" />
         </div>
         <div class="form-group">
           <label for="email">Please enter a valid email address:</label>
@@ -60,19 +63,15 @@
             id="email"
             name="email"
             placeholder="user@email.com"
-            required
           />
         </div>
         <div class="form-group">
           <label for="message">Type your message</label>
-          <textarea
-            id="message"
-            name="message"
-            placeholder="..."
-            required
-          ></textarea>
+          <textarea id="message" name="message" placeholder="..."></textarea>
         </div>
-        <button class="contact-button" id="contact-button" type="submit">Send</button>
+        <button class="contact-button" id="contact-button" type="submit">
+          Send
+        </button>
       </form>
     </div>
   </body>
