--- a/blog.html
+++ b/blog.html
@@ -46,13 +46,15 @@
     </header>
 
     <main>
+      <h1 class="title">Latest updates</h1>
+
       <section>
-        <h1 class="title">Upcoming Workshops</h1>
+        <h2 class="session-title">Upcoming Workshops</h2>
 
         <article>
-          <h2 class="session-title">
+          <h3 class="session-subtitle">
             Cupcake Decorating Class: Fun for Kids and Adults
-          </h2>
+          </h3>
           <p class="regular-text date">August 24, 2024</p>
           <p class="regular-text">
             Join us for a fun-filled cupcake decorating class that's perfect for
@@ -67,7 +69,7 @@
         </article>
 
         <article>
-          <h2 class="session-title">Drip Cake Decorating Workshop</h2>
+          <h3 class="session-subtitle">Drip Cake Decorating Workshop</h3>
           <p class="regular-text date">August 28, 2024</p>
           <p class="regular-text">
             Join us for an exclusive workshop dedicated to the art of decorating
@@ -116,8 +118,9 @@
       </section>
 
       <section>
+        <h2 class="session-title">Recipes</h2>
         <article>
-          <h2 class="session-title">Banana Bread</h2>
+          <h3 class="session-subtitle">Banana Bread</h3>
           <p class="regular-text date">July 30, 2024</p>
           <img src="" alt="" />
           <p class="regular-text">
