Blog page updates

--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
               </form>
             </div>
           </div>
-          <div class="menu-item" data-name="Tiramisu" data-price="50">
+          <div class="menu-item" data-name="Fluffernutter Chocolate Chip Cookies" data-price="5.75">
             <img
               src="image/home/others/flutter nutter.jpg" alt=""
             />
@@ -577,7 +577,7 @@
               </form>
             </div>
           </div>
-          <div class="menu-item" data-name="Macarons" data-price="25">
+          <div class="menu-item" data-name="Tiramisu" data-price="70">
             <img
               src="image/home/others/tiramisu.JPG" alt=""
             />
