--- a/about.html
+++ b/about.html
@@ -31,9 +31,9 @@
 
           <nav>
             <a href="events.html">Events</a>
+            <a href="blog.html">Blog</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
-            <a href="blog.html">Blog</a>
           </nav>
         </div>
 
@@ -44,7 +44,7 @@
     </header>
 
     <main>
-      <h1 class="title">About Us</h1>
+      <h1 class="title">About us</h1>
 
       <section>
         <h2 class="session-title">Welcome to Manaly's Dessert Delivery!</h2>
