--- a/blog.html
+++ b/blog.html
@@ -33,9 +33,9 @@
 
           <nav>
             <a href="events.html">Events</a>
+            <a href="blog.html">Blog</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
-            <a href="blog.html">Blog</a>
           </nav>
         </div>
 
@@ -55,7 +55,7 @@
           <h3 class="session-subtitle">
             Cupcake Decorating Class: Fun for Kids and Adults
           </h3>
-          <p class="regular-text date">August 24, 2024</p>
+          <p class="regular-text date">August 16, 2024</p>
           <p class="regular-text">
             Join us for a fun-filled cupcake decorating class that's perfect for
             both kids and adults! This interactive event will teach participants
@@ -70,7 +70,7 @@
 
         <article>
           <h3 class="session-subtitle">Drip Cake Decorating Workshop</h3>
-          <p class="regular-text date">August 28, 2024</p>
+          <p class="regular-text date">August 12, 2024</p>
           <p class="regular-text">
             Join us for an exclusive workshop dedicated to the art of decorating
             a stunning drip cake! In this hands-on session, we will guide you
@@ -84,49 +84,23 @@
       </section>
 
       <section>
-        <h2 class="session-title">Promotions</h2>
-
-        <article>
-          <h3 class="session-subtitle">Seasonal Treat Box</h3>
-          <p class="regular-text date">August 6, 2024 - August 25, 2024</p>
-          <div>
-            <p class="regular-text">
-              Discover the flavors of the season with our exclusive Seasonal
-              Treat Box, available for pickup only! Enjoy a 20% discount on a
-              box filled with a selection of our seasonal treats.
-            </p>
-            <p class="regular-text">The box includes:</p>
-            <ul class="regular-text">
-              <li>Strawberry Cupcakes</li>
-              <li>Arabian Baklava Rings (containing walnuts and pistachios)</li>
-              <li>
-                Fluffernutter Chocolate Chip Cookies (containing peanut butter)
-              </li>
-              <li>Blueberry Cheesecake Cups</li>
-            </ul>
-            <p class="regular-text">
-              <strong>No modifications permitted with discount.</strong> Perfect
-              for sampling a variety of our delicious offerings, this promotion
-              is designed to let you experience our seasonal treats at a
-              fantastic price. Simply place your order and visit our location to
-              pick up your treat box(es) and use promo code
-              <strong>TREAT20</strong> at checkout. Don't miss this chance to
-              savor our seasonal specialties!
-            </p>
-          </div>
-        </article>
-      </section>
-
-      <section>
         <h2 class="session-title">Recipes</h2>
         <article>
           <h3 class="session-subtitle">Banana Bread</h3>
-          <p class="regular-text date">July 30, 2024</p>
+          <p class="regular-text date">August 10, 2024</p>
           <img src="" alt="" />
           <p class="regular-text">
             This banana bread recipe creates the most delicious, moist loaf with
             loads of banana flavor.
           </p>
+          <iframe
+            width="100%"
+            height="500"
+            src="https://www.youtube.com/embed/U7JXjephvME"
+            frameborder="0"
+            allowfullscreen
+          >
+          </iframe>
 
           <div>
             <h3 class="session-subtitle">Ingredients:</h3>
@@ -173,6 +147,40 @@
             <p class="regular-text">
               If the top of the bread is browning too fast, cover the bread with
               tinfoil and place back in the oven to finish baking
+            </p>
+          </div>
+        </article>
+      </section>
+
+      <section>
+        <h2 class="session-title">Promotions</h2>
+
+        <article>
+          <h3 class="session-subtitle">Seasonal Treat Box</h3>
+          <p class="regular-text date">May 6, 2024 - May 25, 2024</p>
+          <div>
+            <p class="regular-text">
+              Discover the flavors of the season with our exclusive Seasonal
+              Treat Box, available for pickup only! Enjoy a 20% discount on a
+              box filled with a selection of our seasonal treats.
+            </p>
+            <p class="regular-text">The box includes:</p>
+            <ul class="regular-text">
+              <li>Strawberry Cupcakes</li>
+              <li>Arabian Baklava Rings (containing walnuts and pistachios)</li>
+              <li>
+                Fluffernutter Chocolate Chip Cookies (containing peanut butter)
+              </li>
+              <li>Blueberry Cheesecake Cups</li>
+            </ul>
+            <p class="regular-text">
+              <strong>No modifications permitted with discount.</strong> Perfect
+              for sampling a variety of our delicious offerings, this promotion
+              is designed to let you experience our seasonal treats at a
+              fantastic price. Simply place your order and visit our location to
+              pick up your treat box(es) and use promo code
+              <strong>TREAT20</strong> at checkout. Don't miss this chance to
+              savor our seasonal specialties!
             </p>
           </div>
         </article>
