--- a/contact.html
+++ b/contact.html
@@ -47,9 +47,9 @@
     <div class="contact-container">
       <h1 class="title">Contact us</h1>
       <p class="regular-text">Our address is:</p>
-      <p class="regular-text">101, Smith Street, Vancouver, BC</p>
+      <p class="regular-text">101 Smith Street, Vancouver BC</p>
       <p class="regular-text">Phone: 123-456-789</p>
-      <p class="regular-text">Sharing hapiness everywhere!<br />Join us!</p>
+      <p class="regular-text">Sharing happiness everywhere!<br />Join us!</p>
 
       <form>
         <div class="form-group">
