checkout page updated

--- a/checkout.html
+++ b/checkout.html
@@ -48,7 +48,7 @@
       <form id="checkout-form" action="confirmation.html">
         <div class="row">
           <div class="column">
-            <h1 class="title">Deliver Address</h1>
+            <h1 class="title">Delivery Address</h1>
             <div class="input-box">
               <label for="full-name">Full Name</label>
               <input id="full-name" type="text" placeholder="Manaly Stanly" />
