--- a/blog.html
+++ b/blog.html
@@ -90,8 +90,9 @@
           <p class="regular-text date">August 10, 2024</p>
           <img src="" alt="" />
           <p class="regular-text">
-            This banana bread recipe creates the most delicious, moist loaf with
-            loads of banana flavor.
+            This moist banana bread is loaded with mixed nuts and heartwarming 
+            flavor. Serve this bread warm with a smear of butter or wrap it up 
+            and mail it to a friend for the perfect nostalgic treat.
           </p>
           <iframe
             width="100%"
@@ -115,7 +116,7 @@
               <li>3/4 teaspoon baking soda</li>
               <li>1 teaspoon salt</li>
               <li>1 1/4 cups all purpose flour</li>
-              <li>2/3 cup chocolate chips or mixed nuts, roughly chopped</li>
+              <li>2/3 cup mixed nuts or chocolate chips, roughly chopped</li>
             </ul>
 
             <h3 class="session-subtitle">Instructions:</h3>
